# mcp-searchbridge

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mcp_searchbridge/: __init__.py  backend_factory.py  config.py  errors.py  models.py  openai_backend.py  parser.py  private_backend.py  prompts.py  server.py  type_utils.py
tests/: helpers.py  test_backend_factory.py  test_backend_integration.py  test_compose_real_topology.py  test_config.py  test_mcp_stdio_smoke.py  test_parser.py  test_private_backend.py  test_private_backend_real_integration.py  test_prompting.py  test_server_smoke.py
